fix: z-index of actuated

--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ body {
   background-image: linear-gradient(to right, #8c99ab, #7a8493, #68707c, #565c66, #454950, #3d4047, #36383e, #2e3035, #2d2f35, #2d2f35, #2c2e34, #2b2e34);
   width: 15px;
   right: 0;
-  height: 460px;
+  height: 450px;
   border-top-right-radius: 50%;
   bottom: 0;
   position: absolute;
@@ -145,6 +145,7 @@ body {
   transform: translate(-50%, -50%) rotate(37deg);
   bottom: -48px;
   left: 32px;
+  z-index: -1;
 }
 
 .o-actuated-fins-1-bar {
@@ -154,6 +155,7 @@ body {
   position: absolute;
   bottom: 33px;
   left: -53px;
+  z-index: -1;
 }
 
 .o-actuated-fins-2 {
@@ -161,9 +163,10 @@ body {
   width: 90px;
   height: 150px;
   position: absolute;
-  transform: translate(50%, 50%) rotate(-36deg);
+  transform: translate(50%, 50%) rotate(-37deg);
   bottom: 100px;
-  right: 26px;
+  right: 32px;
+  z-index: -1;
 }
 
 .o-actuated-fins-2-bar {
@@ -172,7 +175,8 @@ body {
   height: 40px;
   position: absolute;
   bottom: 29px;
-  right: -52px;
+  right: -48px;
+  z-index: -1;
 }
 
 .c-scape {
